--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 Django==1.8.5
-pinax-theme-bootstrap==7.1.1
-django-user-accounts==1.2
-metron==1.3.5
-pinax-eventlog==1.0.0
-django-jsonfield==0.9.15
+django-appconf==1.0.1
+django-bootstrap-form==3.2
 django-bootstrap3==6.2.2
 django-countries==3.3
 django-easy-pdf==0.1.0
+django-jsonfield==0.9.15
+django-user-accounts==1.2.0
 html5lib==0.9999999
+metron==1.3.5
 Pillow==2.9.0
+pinax-eventlog==1.0.0
+pinax-theme-bootstrap==7.1.1
 PyPDF2==1.25.1
 pytz==2015.6
 reportlab==3.2.0
 requests==2.7.0
+six==1.10.0
 wheel==0.24.0
 xhtml2pdf==0.0.6
