--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^2.1.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "papaparse": "^4.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
   }
