--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Pillow==2.9.0
 pinax-eventlog==1.0.0
 pinax-theme-bootstrap==7.1.1
 PyPDF2==1.25.1
+python-Levenshtein==0.12.0
 pytz==2015.6
 reportlab==3.2.0
 requests==2.7.0
