--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-user-accounts==2.0.3
 pinax-theme-bootstrap==7.1.1
 # psycopg2-binary==2.7.4
 python-Levenshtein==0.12.0
+python-dateutil==2.7.5
 pytz==2017.3
 requests==2.18.4
 sqlparse==0.2.4
