--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,33 @@
 ## The following requirements were added by pip freeze:
+bleach==2.1.4
 certifi==2018.10.15
 Django==2.0
 django-appconf==1.0.2
 django-bootstrap-form==3.3
+django-classy-tags==0.8.0
 django-countries==5.0
 django-form-admin==0.5.1
 django-ipware==2.1.0
+django-js-asset==1.1.0
 django-jsonfield==0.9.15
+django-mptt==0.9.1
+django-nyt==1.1.2
+django-sekizai==0.10.0
 django-user-accounts==2.0.3
+html5lib==1.0.1
 idna==2.6
 jsonfield==2.0.2
-# Pillow==5.0.0
+Markdown==2.6.11
 pinax-stripe==4.4.0
 pinax-theme-bootstrap==7.1.1
-# psycopg2-binary==2.7.4
-python-Levenshtein==0.12.0
 python-dateutil==2.7.5
+python-Levenshtein==0.12.0
 pytz==2017.3
 requests==2.20.1
+sorl-thumbnail==12.5.0
 sqlparse==0.2.4
 stripe==2.12.1
 typing==3.6.2
 urllib3==1.22
+webencodings==0.5.1
+wiki==0.4.4
