--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,23 @@ typing==3.6.2
 urllib3==1.22
 webencodings==0.5.1
 wiki==0.4.4
+aioredis==1.2.0
+asgiref==2.3.2
+async-timeout==3.0.1
+attrs==19.1.0
+autobahn==19.2.1
+Automat==0.7.0
+channels==2.1.7
+channels-redis==2.3.3
+constantly==15.1.0
+daphne==2.2.5
+hiredis==1.0.0
+hyperlink==18.0.0
+incremental==17.5.0
+msgpack==0.6.1
+msgpack-python==0.5.6
+PyHamcrest==1.9.0
+redis==2.10.6
+Twisted==18.9.0
+txaio==18.8.1
+zope.interface==4.6.0
