--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   django:
-    build: ./
+    build: 
+      context: ./
+      args:
+        DEBUG: "True"
     volumes:
       - ./:/app
     ports:
